app/assets/stylesheets/website/page_headers.scss
@import "../shared/utils";

#content {
  section.page_header {
    padding-bottom: 1em;
    border-bottom: 1px solid #bbb;
    // + icons.scss

    h1.page_title {
      @include type-24;
      margin-bottom: 0;
      text-shadow: #fff 0px 1px 0;
      color: #353500;
      margin-left: 1%;
      padding-top: 0.45em;
      font-family: "Gill Sans", sans-serif;
      font-weight: normal;
    }

    h1.page_title.has_meta {
      padding-top: 0;
      margin-bottom: 0.25em;
    }

    .meta {
      margin-bottom: 0;
    }
  }

  .meta {
    margin-left: 1%;
    position: relative;
    span {
      @include type-12;
      margin-right: 0.5em;
    }

    a.tag {
      @include type-12;
      @include box_shadow(0, 0px, 1px, rgba(30,30,30,0.1));
      @include rounded();
      @include vertical_gradient(#fff, #eee);
      background: #fff;
      border: 1px solid #ccc;
      border-bottom: 1px solid #aaa;
      border-top: 1px solid #ddd;
      margin-right: 0.5em;
      padding: 0.2em 0.5em;
      text-align: center;
      white-space: nowrap;
    }

    .change_notes {
      position: absolute;
      padding: 0.5em 0 0 0;
      background: #fff;
      border: 1px solid #ccc;
      @include box_shadow(0, 1px, 4px, rgba(50, 50, 50, 0.5));
      z-index: 9999;
      top: 2em;
      left: -4em;
      width: 115%;
      max-width: 30em;

      h1 {
        @include type-16;
        margin-bottom: 0.5em;
        margin-left: 1em;
        position: relative;

        &:before, &:after {
          content: " ";
          width: 0;
          height: 0;
          border-left: 10px solid transparent;
        	border-right: 10px solid transparent;
        	border-bottom: 10px solid #fff;
        	display: block;
        	position: absolute;
        	top: -18px;
        	left: 62px;
        };

        &:before {
          border-bottom: 12px solid #ddd;
          left: 60px;
          top: -20px;
          border-left-width: 12px;
          border-right-width: 12px;
        }
      }

      ul {
        margin-bottom: 0;
      }

      li {
        margin-bottom: 0.5em;
        border-top: 1px solid #ddd;
        padding: 0.5em 1em 0 1em;

        p {
          @include type-14;
          margin-bottom: 0;
          float: left;
          width: 70%;

          @media only screen and (min-width: 720px) {
            width: 77%;
          }
        }

        abbr {
          float: right;
          @include type-12;
          display: block;
          color: #bbb;
          margin-bottom: 0;
          width: 27%;
          padding-left: 3%;
          text-align: right;

          @media only screen and (min-width: 720px) {
            width: 20%;
          }
        }
      }

    }
  }

  .g3f {
    .page_title {
      margin-left: 2%;
    }
  }
}

